--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 40px;
+}
+
 .container {
     max-width: 1000px;
     width: 100%;
