--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ h2 {
 }
 
 .container {
+
     max-width: 1000px;
     width: 100%;
     margin: auto;
@@ -28,4 +29,21 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+
+#refresh {
+    padding: 8px 15px;
+    text-align: center;
+    position: absolute;
+    margin-top: 50px;
+    left: 50%;
+    transform: translate(-50%);
+    border: 1px solid white;
+    box-shadow: 1px 1px;
+    border-radius: 10px;
+    font-size: 30px;
+    color: white;
+    background-color: black;
+    display: none;
 }
